Internationalisation for BookDetail

--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -1,10 +1,19 @@
 #Eclipse messages class
-#Tue Oct 15 16:03:42 CEST 2013
+#Tue Oct 15 16:33:30 CEST 2013
+BookDetail.btnAdd.text=Remove Copy
+BookDetail.btnRemove.text=Remove Selected
+BookDetail.lblAmount.text=Amount\: 8
+BookDetail.lblAuthor.text=Author
+BookDetail.lblPublisher.text=Publisher
+BookDetail.lblShelf.text=Shelf
+BookDetail.lblTitle.text=Title
+BookDetail.pnlInformation.borderTitle=Book Information
+BookDetail.pnlSpecimensEdit.borderTitle=Copies
 BookMaster.btnAddNewBook.text=Add new book
 BookMaster.btnShowSelected.text=Show selected
 BookMaster.frmTodoTitle.title=BookMaster - DEFAULT LOCALE
 BookMaster.lblChosen.text=Selected\: 1
-BookMaster.lblNrOfBooks.text=Nr of books: 842
+BookMaster.lblNrOfBooks.text=Nr of books\: 842
 BookMaster.lblNrOfCopies.text=Nr of copies\: 2200
 BookMaster.pnlBookInventory.borderTitle=Books - Inventory
 BookMaster.pnlInventoryStats.borderTitle=Inventory statistics
