--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -1,11 +1,20 @@
 #Eclipse messages class
-#Tue Oct 15 15:58:04 CEST 2013
+#Tue Oct 15 16:33:31 CEST 2013
+BookDetail.btnAdd.text=Exemplar hinzuf\u00FCgen
+BookDetail.btnRemove.text=Ausgew\u00E4hlte entfernen
+BookDetail.lblAmount.text=Anzahl\: 8
+BookDetail.lblAuthor.text=Autor
+BookDetail.lblPublisher.text=Verlag
+BookDetail.lblShelf.text=Regal
+BookDetail.lblTitle.text=Titel
+BookDetail.pnlInformation.borderTitle=Buch Information
+BookDetail.pnlSpecimensEdit.borderTitle=Exemplare
 BookMaster.btnAddNewBook.text=Neues Buch hinzuf\u00FCgen
 BookMaster.btnShowSelected.text=Selektierte Anzeigen
 BookMaster.frmTodoTitle.title=BookMaster - CH-LOCALE
 BookMaster.lblChosen.text=Ausgew\u00E4hlt\: 1
-BookMaster.lblNrOfBooks.text=Anzahl Bücher: 842
+BookMaster.lblNrOfBooks.text=Anzahl B\u00FCcher\: 842
 BookMaster.lblNrOfCopies.text=Anzahl Exemplare\: 2200
-BookMaster.pnlBookInventory.borderTitle=Bücher-Inventar
+BookMaster.pnlBookInventory.borderTitle=B\u00FCcher-Inventar
 BookMaster.pnlInventoryStats.borderTitle=Inventar-Statistik
 BookMaster.tbsMain.toolTipText=TODO TOOLTIP
