--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -2,7 +2,7 @@
 #Tue Oct 15 16:33:30 CEST 2013
 BookDetail.btnAdd.text=Remove Copy
 BookDetail.btnRemove.text=Remove Selected
-BookDetail.lblAmount.text=Amount\: 8
+BookDetail.lblAmount.text=Amount\: $PARAM
 BookDetail.lblAuthor.text=Author
 BookDetail.lblPublisher.text=Publisher
 BookDetail.lblShelf.text=Shelf
@@ -12,9 +12,9 @@ BookDetail.pnlSpecimensEdit.borderTitle=Copies
 BookMaster.btnAddNewBook.text=Add new book
 BookMaster.btnShowSelected.text=Show selected
 BookMaster.frmTodoTitle.title=BookMaster - DEFAULT LOCALE
-BookMaster.lblChosen.text=Selected\: 1
-BookMaster.lblNrOfBooks.text=Nr of books\: 842
-BookMaster.lblNrOfCopies.text=Nr of copies\: 2200
+BookMaster.lblChosen.text=Selected\: $PARAM
+BookMaster.lblNrOfBooks.text=Nr of books\: $PARAM
+BookMaster.lblNrOfCopies.text=Nr of copies\: $PARAM
 BookMaster.pnlBookInventory.borderTitle=Books - Inventory
 BookMaster.pnlInventoryStats.borderTitle=Inventory statistics
 BookMaster.tbsMain.toolTipText=tooltip
