--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -2,7 +2,7 @@
 #Tue Oct 15 16:33:31 CEST 2013
 BookDetail.btnAdd.text=Exemplar hinzuf\u00FCgen
 BookDetail.btnRemove.text=Ausgew\u00E4hlte entfernen
-BookDetail.lblAmount.text=Anzahl\: 8
+BookDetail.lblAmount.text=Anzahl\: $PARAM
 BookDetail.lblAuthor.text=Autor
 BookDetail.lblPublisher.text=Verlag
 BookDetail.lblShelf.text=Regal
@@ -12,9 +12,9 @@ BookDetail.pnlSpecimensEdit.borderTitle=Exemplare
 BookMaster.btnAddNewBook.text=Neues Buch hinzuf\u00FCgen
 BookMaster.btnShowSelected.text=Selektierte Anzeigen
 BookMaster.frmTodoTitle.title=BookMaster - CH-LOCALE
-BookMaster.lblChosen.text=Ausgew\u00E4hlt\: 1
-BookMaster.lblNrOfBooks.text=Anzahl B\u00FCcher\: 842
-BookMaster.lblNrOfCopies.text=Anzahl Exemplare\: 2200
+BookMaster.lblChosen.text=Ausgew\u00E4hlt\: $PARAM
+BookMaster.lblNrOfBooks.text=Anzahl B\u00FCcher\: $PARAM
+BookMaster.lblNrOfCopies.text=Anzahl Exemplare\: $PARAM
 BookMaster.pnlBookInventory.borderTitle=B\u00FCcher-Inventar
 BookMaster.pnlInventoryStats.borderTitle=Inventar-Statistik
 BookMaster.tbsMain.toolTipText=TODO TOOLTIP
