--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -1,5 +1,5 @@
 #Eclipse messages class
-#Tue Oct 15 16:33:30 CEST 2013
+#Tue Oct 22 21:15:17 CEST 2013
 BookDetail.btnAdd.text=Remove Copy
 BookDetail.btnRemove.text=Remove Selected
 BookDetail.lblAmount.text=Amount\: $PARAM
@@ -18,3 +18,9 @@ BookMaster.lblNrOfCopies.text=Nr of copies\: $PARAM
 BookMaster.pnlBookInventory.borderTitle=Books - Inventory
 BookMaster.pnlInventoryStats.borderTitle=Inventory statistics
 BookMaster.tbsMain.toolTipText=tooltip
+BookMasterTable.ColumnHeader.Author=Author
+BookMasterTable.ColumnHeader.Available=Available
+BookMasterTable.ColumnHeader.Publisher=Publisher
+BookMasterTable.ColumnHeader.Title=Title
+BookMasterTable.chckbxOnlySelected.text=Only available
+BookMasterTable.textField.text=Search
