--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -1,5 +1,5 @@
 #Eclipse messages class
-#Tue Oct 15 16:33:31 CEST 2013
+#Tue Oct 22 21:15:17 CEST 2013
 BookDetail.btnAdd.text=Exemplar hinzuf\u00FCgen
 BookDetail.btnRemove.text=Ausgew\u00E4hlte entfernen
 BookDetail.lblAmount.text=Anzahl\: $PARAM
@@ -18,3 +18,9 @@ BookMaster.lblNrOfCopies.text=Anzahl Exemplare\: $PARAM
 BookMaster.pnlBookInventory.borderTitle=B\u00FCcher-Inventar
 BookMaster.pnlInventoryStats.borderTitle=Inventar-Statistik
 BookMaster.tbsMain.toolTipText=TODO TOOLTIP
+BookMasterTable.ColumnHeader.Author=Autor
+BookMasterTable.ColumnHeader.Available=Verf\u00FCgbar
+BookMasterTable.ColumnHeader.Publisher=Verlag
+BookMasterTable.ColumnHeader.Title=Titel
+BookMasterTable.chckbxOnlySelected.text=Nur Verf\u00FCgbare
+BookMasterTable.textField.text=Suche
