First filter version & minor fixes

--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -1,6 +1,6 @@
 #Eclipse messages class
-#Tue Oct 22 21:15:17 CEST 2013
-BookDetail.btnAdd.text=Remove Copy
+#Wed Oct 23 17:08:43 CEST 2013
+BookDetail.btnAdd.text=Add Copy
 BookDetail.btnRemove.text=Remove Selected
 BookDetail.lblAmount.text=Amount\: $PARAM
 BookDetail.lblAuthor.text=Author
