Loan View + tons of stuff

--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -1,5 +1,5 @@
 #Eclipse messages class
-#Wed Oct 23 17:08:43 CEST 2013
+#Tue Oct 29 09:14:35 CET 2013
 BookDetail.btnAdd.text=Add Copy
 BookDetail.btnRemove.text=Remove Selected
 BookDetail.lblAmount.text=Amount\: $PARAM
@@ -9,18 +9,31 @@ BookDetail.lblShelf.text=Shelf
 BookDetail.lblTitle.text=Title
 BookDetail.pnlInformation.borderTitle=Book Information
 BookDetail.pnlSpecimensEdit.borderTitle=Copies
+BookMaster.Tab.Books=Books
+BookMaster.Tab.Loans=Loans
 BookMaster.btnAddNewBook.text=Add new book
+BookMaster.btnAddNewLoan.text=Add New Loan
+BookMaster.btnAddNewLoan.text\!=Add New Loan
 BookMaster.btnShowSelected.text=Show selected
+BookMaster.btnShowSelectedLoans.text=Show selected Loans
 BookMaster.frmTodoTitle.title=BookMaster - DEFAULT LOCALE
 BookMaster.lblChosen.text=Selected\: $PARAM
 BookMaster.lblNrOfBooks.text=Nr of books\: $PARAM
 BookMaster.lblNrOfCopies.text=Nr of copies\: $PARAM
 BookMaster.pnlBookInventory.borderTitle=Books - Inventory
+BookMaster.pnlBookInventoryStats.borderTitle=Inventory Statistics
 BookMaster.pnlInventoryStats.borderTitle=Inventory statistics
+BookMaster.pnlLoansInventoryStats.borderTitle=Loans statistics
 BookMaster.tbsMain.toolTipText=tooltip
 BookMasterTable.ColumnHeader.Author=Author
 BookMasterTable.ColumnHeader.Available=Available
 BookMasterTable.ColumnHeader.Publisher=Publisher
 BookMasterTable.ColumnHeader.Title=Title
 BookMasterTable.chckbxOnlySelected.text=Only available
+BookMasterTable.lblNrOfCurrentLoans.text=Current Loans\: $PARAM
+BookMasterTable.lblNrOfDueLoans.text=Due Loans\: $PARAM
+BookMasterTable.lblNrOfLoans.text=Nr. of Loans\: $PARAM
+BookMasterTable.pnlLoansInventory.TitledBorder.text=Registered Loans
+BookMasterTable.showUnavailableMenuItem.text=Show Completed
 BookMasterTable.textField.text=Search
+BookMasterTable.viewMenu.text=View
