--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -1,5 +1,5 @@
 #Eclipse messages class
-#Tue Oct 22 21:15:17 CEST 2013
+#Tue Oct 29 09:14:35 CET 2013
 BookDetail.btnAdd.text=Exemplar hinzuf\u00FCgen
 BookDetail.btnRemove.text=Ausgew\u00E4hlte entfernen
 BookDetail.lblAmount.text=Anzahl\: $PARAM
@@ -9,18 +9,31 @@ BookDetail.lblShelf.text=Regal
 BookDetail.lblTitle.text=Titel
 BookDetail.pnlInformation.borderTitle=Buch Information
 BookDetail.pnlSpecimensEdit.borderTitle=Exemplare
+BookMaster.Tab.Books=B\u00FCcher
+BookMaster.Tab.Loans=Ausleihen
 BookMaster.btnAddNewBook.text=Neues Buch hinzuf\u00FCgen
+BookMaster.btnAddNewLoan.text=Neue Ausleihe erfassen
+BookMaster.btnAddNewLoan.text\!=Neue Ausleihe erfassen
 BookMaster.btnShowSelected.text=Selektierte Anzeigen
+BookMaster.btnShowSelectedLoans.text=Selektierte Ausleihe anzeigen
 BookMaster.frmTodoTitle.title=BookMaster - CH-LOCALE
 BookMaster.lblChosen.text=Ausgew\u00E4hlt\: $PARAM
 BookMaster.lblNrOfBooks.text=Anzahl B\u00FCcher\: $PARAM
 BookMaster.lblNrOfCopies.text=Anzahl Exemplare\: $PARAM
 BookMaster.pnlBookInventory.borderTitle=B\u00FCcher-Inventar
+BookMaster.pnlBookInventoryStats.borderTitle=Inventar-Statistik
 BookMaster.pnlInventoryStats.borderTitle=Inventar-Statistik
+BookMaster.pnlLoansInventoryStats.borderTitle=Ausleihe-Statistik
 BookMaster.tbsMain.toolTipText=TODO TOOLTIP
 BookMasterTable.ColumnHeader.Author=Autor
 BookMasterTable.ColumnHeader.Available=Verf\u00FCgbar
 BookMasterTable.ColumnHeader.Publisher=Verlag
 BookMasterTable.ColumnHeader.Title=Titel
 BookMasterTable.chckbxOnlySelected.text=Nur Verf\u00FCgbare
+BookMasterTable.lblNrOfCurrentLoans.text=Aktuell Ausgeliehen\: $PARAM
+BookMasterTable.lblNrOfDueLoans.text=\u00DCberf\u00E4llige Ausleihen\: $PARAM
+BookMasterTable.lblNrOfLoans.text=Anzahl Ausleihen\: $PARAM
+BookMasterTable.pnlLoansInventory.TitledBorder.text=Erfasste Ausleihen
+BookMasterTable.showUnavailableMenuItem.text=Zeige Nicht Verf\u00FCgbare
 BookMasterTable.textField.text=Suche
+BookMasterTable.viewMenu.text=Ansicht
