--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -1,5 +1,5 @@
 #Eclipse messages class
-#Tue Oct 29 09:14:35 CET 2013
+#Tue Oct 29 11:28:44 CET 2013
 BookDetail.btnAdd.text=Add Copy
 BookDetail.btnRemove.text=Remove Selected
 BookDetail.lblAmount.text=Amount\: $PARAM
@@ -25,6 +25,13 @@ BookMaster.pnlBookInventoryStats.borderTitle=Inventory Statistics
 BookMaster.pnlInventoryStats.borderTitle=Inventory statistics
 BookMaster.pnlLoansInventoryStats.borderTitle=Loans statistics
 BookMaster.tbsMain.toolTipText=tooltip
+BookMasterLoanTable.ColumnHeader.CopyID=Copy ID
+BookMasterLoanTable.ColumnHeader.LentTo=Lent to
+BookMasterLoanTable.ColumnHeader.LentUntil=Lent until
+BookMasterLoanTable.ColumnHeader.Status=Status
+BookMasterLoanTable.ColumnHeader.Title=Title
+BookMasterLoanTable.LoanDate.Since=since $PARAM
+BookMasterLoanTable.LoanDate.Until=until $PARAM
 BookMasterTable.ColumnHeader.Author=Author
 BookMasterTable.ColumnHeader.Available=Available
 BookMasterTable.ColumnHeader.Publisher=Publisher
@@ -36,4 +43,6 @@ BookMasterTable.lblNrOfLoans.text=Nr. of Loans\: $PARAM
 BookMasterTable.pnlLoansInventory.TitledBorder.text=Registered Loans
 BookMasterTable.showUnavailableMenuItem.text=Show Completed
 BookMasterTable.textField.text=Search
+BookMasterTable.txtSearch.text=Search
 BookMasterTable.viewMenu.text=View
+Library.DateFormat=mm/dd/yy
