--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -1,5 +1,5 @@
 #Eclipse messages class
-#Tue Oct 29 09:14:35 CET 2013
+#Tue Oct 29 11:28:44 CET 2013
 BookDetail.btnAdd.text=Exemplar hinzuf\u00FCgen
 BookDetail.btnRemove.text=Ausgew\u00E4hlte entfernen
 BookDetail.lblAmount.text=Anzahl\: $PARAM
@@ -25,6 +25,13 @@ BookMaster.pnlBookInventoryStats.borderTitle=Inventar-Statistik
 BookMaster.pnlInventoryStats.borderTitle=Inventar-Statistik
 BookMaster.pnlLoansInventoryStats.borderTitle=Ausleihe-Statistik
 BookMaster.tbsMain.toolTipText=TODO TOOLTIP
+BookMasterLoanTable.ColumnHeader.CopyID=Exemplar-ID
+BookMasterLoanTable.ColumnHeader.LentTo=Ausgeliehen an
+BookMasterLoanTable.ColumnHeader.LentUntil=Ausgeliehen bis
+BookMasterLoanTable.ColumnHeader.Status=Status
+BookMasterLoanTable.ColumnHeader.Title=Titel
+BookMasterLoanTable.LoanDate.Since=seit $PARAM
+BookMasterLoanTable.LoanDate.Until=bis $PARAM
 BookMasterTable.ColumnHeader.Author=Autor
 BookMasterTable.ColumnHeader.Available=Verf\u00FCgbar
 BookMasterTable.ColumnHeader.Publisher=Verlag
@@ -36,4 +43,6 @@ BookMasterTable.lblNrOfLoans.text=Anzahl Ausleihen\: $PARAM
 BookMasterTable.pnlLoansInventory.TitledBorder.text=Erfasste Ausleihen
 BookMasterTable.showUnavailableMenuItem.text=Zeige Nicht Verf\u00FCgbare
 BookMasterTable.textField.text=Suche
+BookMasterTable.txtSearch.text=Suche
 BookMasterTable.viewMenu.text=Ansicht
+Library.DateFormat=dd.mm.yy
