--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -1,7 +1,10 @@
 #Eclipse messages class
-#Tue Oct 29 11:28:44 CET 2013
+#Tue Oct 29 13:29:18 CET 2013
 BookDetail.btnAdd.text=Add Copy
+BookDetail.btnNewButton.text=Speichern
+BookDetail.btnNewButton_1.text=Zur\u00FCcksetzen
 BookDetail.btnRemove.text=Remove Selected
+BookDetail.btnSpeichern.text=Speichern
 BookDetail.lblAmount.text=Amount\: $PARAM
 BookDetail.lblAuthor.text=Author
 BookDetail.lblPublisher.text=Publisher
