Cleaned up TableModels

--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -16,7 +16,6 @@ BookMaster.Tab.Books=Books
 BookMaster.Tab.Loans=Loans
 BookMaster.btnAddNewBook.text=Add new book
 BookMaster.btnAddNewLoan.text=Add New Loan
-BookMaster.btnAddNewLoan.text\!=Add New Loan
 BookMaster.btnShowSelected.text=Show selected
 BookMaster.btnShowSelectedLoans.text=Show selected Loans
 BookMaster.frmTodoTitle.title=BookMaster - DEFAULT LOCALE
@@ -40,6 +39,8 @@ BookMasterTable.ColumnHeader.Available=Available
 BookMasterTable.ColumnHeader.Publisher=Publisher
 BookMasterTable.ColumnHeader.Title=Title
 BookMasterTable.chckbxOnlySelected.text=Only available
+BookMasterTable.chckbxOnlyDueLoans.text=Show Overdue Loans only
+BookMasterTable.chckbxOnlyDueLoans.desc=Show all loans or only overdue ones
 BookMasterTable.lblNrOfCurrentLoans.text=Current Loans\: $PARAM
 BookMasterTable.lblNrOfDueLoans.text=Due Loans\: $PARAM
 BookMasterTable.lblNrOfLoans.text=Nr. of Loans\: $PARAM
