--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -13,7 +13,6 @@ BookMaster.Tab.Books=B\u00FCcher
 BookMaster.Tab.Loans=Ausleihen
 BookMaster.btnAddNewBook.text=Neues Buch hinzuf\u00FCgen
 BookMaster.btnAddNewLoan.text=Neue Ausleihe erfassen
-BookMaster.btnAddNewLoan.text\!=Neue Ausleihe erfassen
 BookMaster.btnShowSelected.text=Selektierte Anzeigen
 BookMaster.btnShowSelectedLoans.text=Selektierte Ausleihe anzeigen
 BookMaster.frmTodoTitle.title=BookMaster - CH-LOCALE
@@ -37,6 +36,8 @@ BookMasterTable.ColumnHeader.Available=Verf\u00FCgbar
 BookMasterTable.ColumnHeader.Publisher=Verlag
 BookMasterTable.ColumnHeader.Title=Titel
 BookMasterTable.chckbxOnlySelected.text=Nur Verf\u00FCgbare
+BookMasterTable.chckbxOnlyDueLoans.text=Nur \u00DCberf\u00E4llige Ausleihen
+BookMasterTable.chckbxOnlyDueLoans.desc=Alle oder nur \u00DCberf\u00E4llige Ausleihen anzeigen
 BookMasterTable.lblNrOfCurrentLoans.text=Aktuell Ausgeliehen\: $PARAM
 BookMasterTable.lblNrOfDueLoans.text=\u00DCberf\u00E4llige Ausleihen\: $PARAM
 BookMasterTable.lblNrOfLoans.text=Anzahl Ausleihen\: $PARAM
