--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -50,3 +50,6 @@ BookMasterTable.textField.text=Search
 BookMasterTable.txtSearch.text=Search
 BookMasterTable.viewMenu.text=View
 Library.DateFormat=mm/dd/yy
+BookMastertable.BookTableModes.All=All
+BookMastertable.BookTableModes.LentOnly=Lent only
+BookMastertable.BookTableModes.OverdueOnly=Overdue only
