--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -47,3 +47,6 @@ BookMasterTable.textField.text=Suche
 BookMasterTable.txtSearch.text=Suche
 BookMasterTable.viewMenu.text=Ansicht
 Library.DateFormat=dd.mm.yy
+BookMastertable.BookTableModes.All=Alle
+BookMastertable.BookTableModes.LentOnly=Nur Ausgeliehene
+BookMastertable.BookTableModes.OverdueOnly=Nur Überfällige
