CleanUp in BookDetail, Added Actions

--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -53,3 +53,4 @@ Library.DateFormat=mm/dd/yy
 BookMastertable.BookTableModes.All=All
 BookMastertable.BookTableModes.LentOnly=Lent only
 BookMastertable.BookTableModes.OverdueOnly=Overdue only
+BookDetail.btnCancel.text=Cancel
