--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -50,3 +50,4 @@ Library.DateFormat=dd.mm.yy
 BookMastertable.BookTableModes.All=Alle
 BookMastertable.BookTableModes.LentOnly=Nur Ausgeliehene
 BookMastertable.BookTableModes.OverdueOnly=Nur Überfällige
+BookDetail.btnCancel.text=Abbrechen
