added CustomerTab (WIP - work in progress)

--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -51,3 +51,8 @@ BookMastertable.BookTableModes.All=Alle
 BookMastertable.BookTableModes.LentOnly=Nur Ausgeliehene
 BookMastertable.BookTableModes.OverdueOnly=Nur Überfällige
 BookDetail.btnCancel.text=Abbrechen
+MainView.Tab.Customers=Kunden
+CustomerMasterTable.ColumnHeader.CustomerNo=Kundennummer
+CustomerMasterTable.ColumnHeader.Name=Name
+CustomerMasterTable.ColumnHeader.Address=Adresse
+CustomerTab.CustomerStats.Title=Customer Details
