--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -54,3 +54,8 @@ BookMastertable.BookTableModes.All=All
 BookMastertable.BookTableModes.LentOnly=Lent only
 BookMastertable.BookTableModes.OverdueOnly=Overdue only
 BookDetail.btnCancel.text=Cancel
+MainView.Tab.Customers=Customers
+CustomerMasterTable.ColumnHeader.CustomerNo=Customer No.
+CustomerMasterTable.ColumnHeader.Name=Name
+CustomerMasterTable.ColumnHeader.Address=Address
+CustomerTab.CustomerStats.Title=Kundeninfos
