Customer: added button functionality

--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -58,4 +58,8 @@ MainView.Tab.Customers=Customers
 CustomerMasterTable.ColumnHeader.CustomerNo=Customer No.
 CustomerMasterTable.ColumnHeader.Name=Name
 CustomerMasterTable.ColumnHeader.Address=Address
-CustomerTab.CustomerStats.Title=Kundeninfos
+CustomerTab.CustomerStats.Title=Customer Details
+CustomerTab.btnShowSelected.text=Show Selected Customer
+CustomerTab.btnAddNewCustomer.text=Add New Customer
+Customertab.pnlCustomerInventory.borderTitle=Customer List
+CustomerTab.lblNrOfCustomers.text=Nr. of customers: $PARAM
