--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -55,4 +55,8 @@ MainView.Tab.Customers=Kunden
 CustomerMasterTable.ColumnHeader.CustomerNo=Kundennummer
 CustomerMasterTable.ColumnHeader.Name=Name
 CustomerMasterTable.ColumnHeader.Address=Adresse
-CustomerTab.CustomerStats.Title=Customer Details
+CustomerTab.CustomerStats.Title=Kundeninfos
+CustomerTab.btnShowSelected.text=Selektierte anzeigen
+CustomerTab.btnAddNewCustomer.text=Neuer Kunde
+Customertab.pnlCustomerInventory.borderTitle=Kundenliste
+CustomerTab.lblNrOfCustomers.text=Anzahl Kunden: $PARAM
