CustomerDetails: Done with text fields.

--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -1,6 +1,7 @@
 #Eclipse messages class
-#Tue Oct 29 13:29:18 CET 2013
+#Tue Nov 12 22:34:22 CET 2013
 BookDetail.btnAdd.text=Add Copy
+BookDetail.btnCancel.text=Cancel
 BookDetail.btnNewButton.text=Speichern
 BookDetail.btnNewButton_1.text=Zur\u00FCcksetzen
 BookDetail.btnRemove.text=Remove Selected
@@ -9,7 +10,7 @@ BookDetail.lblAmount.text=Amount\: $PARAM
 BookDetail.lblAuthor.text=Author
 BookDetail.lblPublisher.text=Publisher
 BookDetail.lblShelf.text=Shelf
-BookDetail.lblTitle.text=Title
+BookDetail.lblTitle.text=Street
 BookDetail.pnlInformation.borderTitle=Book Information
 BookDetail.pnlSpecimensEdit.borderTitle=Copies
 BookMaster.Tab.Books=Books
@@ -38,9 +39,9 @@ BookMasterTable.ColumnHeader.Author=Author
 BookMasterTable.ColumnHeader.Available=Available
 BookMasterTable.ColumnHeader.Publisher=Publisher
 BookMasterTable.ColumnHeader.Title=Title
-BookMasterTable.chckbxOnlySelected.text=Only available
-BookMasterTable.chckbxOnlyDueLoans.text=Show Overdue Loans only
 BookMasterTable.chckbxOnlyDueLoans.desc=Show all loans or only overdue ones
+BookMasterTable.chckbxOnlyDueLoans.text=Show Overdue Loans only
+BookMasterTable.chckbxOnlySelected.text=Only available
 BookMasterTable.lblNrOfCurrentLoans.text=Current Loans\: $PARAM
 BookMasterTable.lblNrOfDueLoans.text=Due Loans\: $PARAM
 BookMasterTable.lblNrOfLoans.text=Nr. of Loans\: $PARAM
@@ -49,17 +50,37 @@ BookMasterTable.showUnavailableMenuItem.text=Show Completed
 BookMasterTable.textField.text=Search
 BookMasterTable.txtSearch.text=Search
 BookMasterTable.viewMenu.text=View
-Library.DateFormat=mm/dd/yy
 BookMastertable.BookTableModes.All=All
 BookMastertable.BookTableModes.LentOnly=Lent only
 BookMastertable.BookTableModes.OverdueOnly=Overdue only
-BookDetail.btnCancel.text=Cancel
+CustomerDetail.lblNewLabel.text=New label
+CustomerDetail.lblNewLabel.text_1=New label
+CustomerDetail.lblNewLabel.text_2=ZIP
+CustomerDetail.lblNewLabel_1.text=New label
+CustomerDetail.lblNewLabel_1.text_1=New label
+CustomerDetail.lblNewLabel_1.text_2=City
+CustomerDetail.lblNewLabel_2.text=Surname
+CustomerMasterTable.ColumnHeader.Address=Address
+CustomerMasterTable.ColumnHeader.CustomerNo=Customer No.
+CustomerMasterTable.ColumnHeader.Name=Name
+CustomerTab.CustomerStats.Title=Customer Details
+CustomerTab.btnAddNewCustomer.text=Add New Customer
+CustomerTab.btnShowSelected.text=Show Selected Customer
+CustomerTab.lblNrOfCustomers.text=Nr. of customers\: $PARAM
+Customertab.pnlCustomerInventory.borderTitle=Customer List
+Library.DateFormat=mm/dd/yy
 MainView.Tab.Customers=Customers
 CustomerMasterTable.ColumnHeader.CustomerNo=Customer No.
 CustomerMasterTable.ColumnHeader.Name=Name
 CustomerMasterTable.ColumnHeader.Address=Address
 CustomerTab.CustomerStats.Title=Customer Details
-CustomerTab.btnShowSelected.text=Show Selected Customer
-CustomerTab.btnAddNewCustomer.text=Add New Customer
+CustomerTab.btnShowSelected.text=Show selected
+CustomerTab.btnAddNewCustomer.text=New Customer
 Customertab.pnlCustomerInventory.borderTitle=Customer List
-CustomerTab.lblNrOfCustomers.text=Nr. of customers: $PARAM
+CustomerTab.lblNrOfCustomers.text=Nr of customers: $PARAM
+CustomerDetail.CustomerNo=ID
+CustomerDetail.Surname=Surname
+CustomerDetail.Name=Name
+CustomerDetail.Street=Street
+CustomerDetail.Zip=ZIP
+CustomerDetail.City=City
