--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -60,3 +60,9 @@ CustomerTab.btnShowSelected.text=Selektierte anzeigen
 CustomerTab.btnAddNewCustomer.text=Neuer Kunde
 Customertab.pnlCustomerInventory.borderTitle=Kundenliste
 CustomerTab.lblNrOfCustomers.text=Anzahl Kunden: $PARAM
+CustomerDetail.CustomerNo=ID
+CustomerDetail.Surname=Vorname
+CustomerDetail.Name=Nacme
+CustomerDetail.Street=Strasse
+CustomerDetail.Zip=PLZ
+CustomerDetail.City=Stadt
