IT'S SO BEAUTIFUL!

--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -1,5 +1,5 @@
 #Eclipse messages class
-#Tue Nov 12 22:34:22 CET 2013
+#Tue Nov 12 23:30:15 CET 2013
 BookDetail.btnAdd.text=Add Copy
 BookDetail.btnCancel.text=Cancel
 BookDetail.btnNewButton.text=Speichern
@@ -53,6 +53,19 @@ BookMasterTable.viewMenu.text=View
 BookMastertable.BookTableModes.All=All
 BookMastertable.BookTableModes.LentOnly=Lent only
 BookMastertable.BookTableModes.OverdueOnly=Overdue only
+CustomerDetail.City=City
+CustomerDetail.CustomerNo=ID
+CustomerDetail.Name=Name
+CustomerDetail.Street=Street
+CustomerDetail.Surname=Surname
+CustomerDetail.Zip=ZIP
+CustomerDetail.btnNewButton.text=New button
+CustomerDetail.btnNewButton.text_1=Something
+CustomerDetail.btnNewButton_1.text=New button
+CustomerDetail.btnNewButton_1.text_1=Save
+CustomerDetail.btnNewButton_2.text=Cancel
+CustomerDetail.btnNewButton_3.text=New button
+CustomerDetail.btnNewButton_3.text_1=Reset
 CustomerDetail.lblNewLabel.text=New label
 CustomerDetail.lblNewLabel.text_1=New label
 CustomerDetail.lblNewLabel.text_2=ZIP
@@ -64,23 +77,13 @@ CustomerMasterTable.ColumnHeader.Address=Address
 CustomerMasterTable.ColumnHeader.CustomerNo=Customer No.
 CustomerMasterTable.ColumnHeader.Name=Name
 CustomerTab.CustomerStats.Title=Customer Details
-CustomerTab.btnAddNewCustomer.text=Add New Customer
-CustomerTab.btnShowSelected.text=Show Selected Customer
-CustomerTab.lblNrOfCustomers.text=Nr. of customers\: $PARAM
+CustomerTab.btnAddNewCustomer.text=New Customer
+CustomerTab.btnShowSelected.text=Show selected
+CustomerTab.lblNrOfCustomers.text=Nr of customers\: $PARAM
 Customertab.pnlCustomerInventory.borderTitle=Customer List
 Library.DateFormat=mm/dd/yy
 MainView.Tab.Customers=Customers
-CustomerMasterTable.ColumnHeader.CustomerNo=Customer No.
-CustomerMasterTable.ColumnHeader.Name=Name
-CustomerMasterTable.ColumnHeader.Address=Address
-CustomerTab.CustomerStats.Title=Customer Details
-CustomerTab.btnShowSelected.text=Show selected
-CustomerTab.btnAddNewCustomer.text=New Customer
-Customertab.pnlCustomerInventory.borderTitle=Customer List
-CustomerTab.lblNrOfCustomers.text=Nr of customers: $PARAM
-CustomerDetail.CustomerNo=ID
-CustomerDetail.Surname=Surname
-CustomerDetail.Name=Name
-CustomerDetail.Street=Street
-CustomerDetail.Zip=ZIP
-CustomerDetail.City=City
+CustomerDetail.btnReset.text=Reset
+CustomerDetail.btnDelete.text=Delete Customer
+CustomerDetail.btnSave.text=Save
+CustomerDetail.btnCancel.text=Cancel
