--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -66,3 +66,7 @@ CustomerDetail.Name=Nacme
 CustomerDetail.Street=Strasse
 CustomerDetail.Zip=PLZ
 CustomerDetail.City=Stadt
+CustomerDetail.btnReset.text=Zurücksetzen
+CustomerDetail.btnDelete.text=Löschen
+CustomerDetail.btnSave.text=Speichern
+CustomerDetail.btnCancel.text=Abbrechen
