--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -87,3 +87,5 @@ CustomerDetail.btnReset.text=Reset
 CustomerDetail.btnDelete.text=Delete Customer
 CustomerDetail.btnSave.text=Save
 CustomerDetail.btnCancel.text=Cancel
+CustomerDetail.deleteDlg.message=Do you really want to delete this customer? This action cannot be reversed.
+CustomerDetail.deleteDlg.title=Are you sure?
