--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -70,3 +70,5 @@ CustomerDetail.btnReset.text=Zurücksetzen
 CustomerDetail.btnDelete.text=Löschen
 CustomerDetail.btnSave.text=Speichern
 CustomerDetail.btnCancel.text=Abbrechen
+CustomerDetail.deleteDlg.message=Wollen Sie diesen Kunden wirklich löschen? Diese Aktion kann nicht rückgängig gemacht werden.
+CustomerDetail.deleteDlg.title=Sind Sie sicher?
