Added CustomerList (way easier that way and less update events used). And: customer stuff works! CRUD, baby!

--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -10,7 +10,7 @@ BookDetail.lblAmount.text=Amount\: $PARAM
 BookDetail.lblAuthor.text=Author
 BookDetail.lblPublisher.text=Publisher
 BookDetail.lblShelf.text=Shelf
-BookDetail.lblTitle.text=Street
+BookDetail.lblTitle.text=Title
 BookDetail.pnlInformation.borderTitle=Book Information
 BookDetail.pnlSpecimensEdit.borderTitle=Copies
 BookMaster.Tab.Books=Books
