BookDialog: added lots of functionality (delete, etc) Added Exit-Button/Functionality on main dialog BookTable: added Shelf (according to Scenario 1) ...

--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -1,11 +1,13 @@
 #Eclipse messages class
-#Tue Nov 12 23:30:15 CET 2013
+#Sat Nov 16 20:47:33 CET 2013
 BookDetail.btnAdd.text=Add Copy
 BookDetail.btnCancel.text=Cancel
-BookDetail.btnNewButton.text=Speichern
-BookDetail.btnNewButton_1.text=Zur\u00FCcksetzen
-BookDetail.btnRemove.text=Remove Selected
-BookDetail.btnSpeichern.text=Speichern
+BookDetail.btnRemove.text=Delete
+BookDetail.btnRemoveCopy.text=Remove selected
+BookDetail.btnReset.text=Reset
+BookDetail.btnSave.text=Save
+BookDetail.deleteDlg.message=Do you really want to delete this book? This also deletes all of its copies. This action cannot be reversed.
+BookDetail.deleteDlg.title=Are you sure?
 BookDetail.lblAmount.text=Amount\: $PARAM
 BookDetail.lblAuthor.text=Author
 BookDetail.lblPublisher.text=Publisher
@@ -39,6 +41,7 @@ BookMasterTable.ColumnHeader.Author=Author
 BookMasterTable.ColumnHeader.Available=Available
 BookMasterTable.ColumnHeader.Publisher=Publisher
 BookMasterTable.ColumnHeader.Title=Title
+BookMasterTable.ColumnHeader.Shelf=Shelf
 BookMasterTable.chckbxOnlyDueLoans.desc=Show all loans or only overdue ones
 BookMasterTable.chckbxOnlyDueLoans.text=Show Overdue Loans only
 BookMasterTable.chckbxOnlySelected.text=Only available
@@ -59,13 +62,15 @@ CustomerDetail.Name=Name
 CustomerDetail.Street=Street
 CustomerDetail.Surname=Surname
 CustomerDetail.Zip=ZIP
-CustomerDetail.btnNewButton.text=New button
-CustomerDetail.btnNewButton.text_1=Something
-CustomerDetail.btnNewButton_1.text=New button
+CustomerDetail.btnCancel.text=Cancel
+CustomerDetail.btnDelete.text=Delete Customer
 CustomerDetail.btnNewButton_1.text_1=Save
 CustomerDetail.btnNewButton_2.text=Cancel
-CustomerDetail.btnNewButton_3.text=New button
 CustomerDetail.btnNewButton_3.text_1=Reset
+CustomerDetail.btnReset.text=Reset
+CustomerDetail.btnSave.text=Save
+CustomerDetail.deleteDlg.message=Do you really want to delete this customer? This action cannot be reversed.
+CustomerDetail.deleteDlg.title=Are you sure?
 CustomerDetail.lblNewLabel.text=New label
 CustomerDetail.lblNewLabel.text_1=New label
 CustomerDetail.lblNewLabel.text_2=ZIP
@@ -83,9 +88,4 @@ CustomerTab.lblNrOfCustomers.text=Nr of customers\: $PARAM
 Customertab.pnlCustomerInventory.borderTitle=Customer List
 Library.DateFormat=mm/dd/yy
 MainView.Tab.Customers=Customers
-CustomerDetail.btnReset.text=Reset
-CustomerDetail.btnDelete.text=Delete Customer
-CustomerDetail.btnSave.text=Save
-CustomerDetail.btnCancel.text=Cancel
-CustomerDetail.deleteDlg.message=Do you really want to delete this customer? This action cannot be reversed.
-CustomerDetail.deleteDlg.title=Are you sure?
+MainView.btnExit.text=Exit
