--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -1,7 +1,11 @@
 #Eclipse messages class
 #Tue Oct 29 11:28:44 CET 2013
 BookDetail.btnAdd.text=Exemplar hinzuf\u00FCgen
-BookDetail.btnRemove.text=Ausgew\u00E4hlte entfernen
+BookDetail.btnDelete.text=Löschen
+BookDetail.btnCancel.text=Abbrechen
+BookDetail.btnSave.text=Speichern
+BookDetail.btnReset.text=Zurücksetzen
+BookDetail.btnRemoveCopy.text=Ausgewählte entfernen
 BookDetail.lblAmount.text=Anzahl\: $PARAM
 BookDetail.lblAuthor.text=Autor
 BookDetail.lblPublisher.text=Verlag
@@ -35,6 +39,7 @@ BookMasterTable.ColumnHeader.Author=Autor
 BookMasterTable.ColumnHeader.Available=Verf\u00FCgbar
 BookMasterTable.ColumnHeader.Publisher=Verlag
 BookMasterTable.ColumnHeader.Title=Titel
+BookMasterTable.ColumnHeader.Shelf=Standort
 BookMasterTable.chckbxOnlySelected.text=Nur Verf\u00FCgbare
 BookMasterTable.chckbxOnlyDueLoans.text=Nur \u00DCberf\u00E4llige Ausleihen
 BookMasterTable.chckbxOnlyDueLoans.desc=Alle oder nur \u00DCberf\u00E4llige Ausleihen anzeigen
@@ -72,3 +77,6 @@ CustomerDetail.btnSave.text=Speichern
 CustomerDetail.btnCancel.text=Abbrechen
 CustomerDetail.deleteDlg.message=Wollen Sie diesen Kunden wirklich löschen? Diese Aktion kann nicht rückgängig gemacht werden.
 CustomerDetail.deleteDlg.title=Sind Sie sicher?
+BookDetail.deleteDlg.message=Wollen Sie dieses Buch wirklich löschen? Dadurch werden auch alle Exemplare dieses Titels gelöscht. Diese Aktion kann nicht rückgängig gemacht werden.
+BookDetail.deleteDlg.title=Sind Sie sicher?
+MainView.btnExit.text=Schliessen
