started with LoanDetail

--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -89,3 +89,4 @@ Customertab.pnlCustomerInventory.borderTitle=Customer List
 Library.DateFormat=mm/dd/yy
 MainView.Tab.Customers=Customers
 MainView.btnExit.text=Exit
+LoanDetail.nrOfLoansOfCustomer.text=Nr of loans: $PARAM
