--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -80,3 +80,4 @@ CustomerDetail.deleteDlg.title=Sind Sie sicher?
 BookDetail.deleteDlg.message=Wollen Sie dieses Buch wirklich löschen? Dadurch werden auch alle Exemplare dieses Titels gelöscht. Diese Aktion kann nicht rückgängig gemacht werden.
 BookDetail.deleteDlg.title=Sind Sie sicher?
 MainView.btnExit.text=Schliessen
+LoanDetail.nrOfLoansOfCustomer.text=Anzahl Ausleihen: $PARAM
