--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -1,11 +1,14 @@
 #Eclipse messages class
-#Tue Oct 29 11:28:44 CET 2013
+#Sun Nov 17 13:16:44 CET 2013
 BookDetail.btnAdd.text=Exemplar hinzuf\u00FCgen
-BookDetail.btnDelete.text=Löschen
 BookDetail.btnCancel.text=Abbrechen
+BookDetail.btnDelete.text=L\u00F6schen
+BookDetail.btnRemove.text=L\u00F6schen
+BookDetail.btnRemoveCopy.text=Ausgew\u00E4hlte entfernen
+BookDetail.btnReset.text=Zur\u00FCcksetzen
 BookDetail.btnSave.text=Speichern
-BookDetail.btnReset.text=Zurücksetzen
-BookDetail.btnRemoveCopy.text=Ausgewählte entfernen
+BookDetail.deleteDlg.message=Wollen Sie dieses Buch wirklich l\u00F6schen? Dadurch werden auch alle Exemplare dieses Titels gel\u00F6scht. Diese Aktion kann nicht r\u00FCckg\u00E4ngig gemacht werden.
+BookDetail.deleteDlg.title=Sind Sie sicher?
 BookDetail.lblAmount.text=Anzahl\: $PARAM
 BookDetail.lblAuthor.text=Autor
 BookDetail.lblPublisher.text=Verlag
@@ -38,11 +41,11 @@ BookMasterLoanTable.LoanDate.Until=bis $PARAM
 BookMasterTable.ColumnHeader.Author=Autor
 BookMasterTable.ColumnHeader.Available=Verf\u00FCgbar
 BookMasterTable.ColumnHeader.Publisher=Verlag
-BookMasterTable.ColumnHeader.Title=Titel
 BookMasterTable.ColumnHeader.Shelf=Standort
-BookMasterTable.chckbxOnlySelected.text=Nur Verf\u00FCgbare
-BookMasterTable.chckbxOnlyDueLoans.text=Nur \u00DCberf\u00E4llige Ausleihen
+BookMasterTable.ColumnHeader.Title=Titel
 BookMasterTable.chckbxOnlyDueLoans.desc=Alle oder nur \u00DCberf\u00E4llige Ausleihen anzeigen
+BookMasterTable.chckbxOnlyDueLoans.text=Nur \u00DCberf\u00E4llige Ausleihen
+BookMasterTable.chckbxOnlySelected.text=Nur Verf\u00FCgbare
 BookMasterTable.lblNrOfCurrentLoans.text=Aktuell Ausgeliehen\: $PARAM
 BookMasterTable.lblNrOfDueLoans.text=\u00DCberf\u00E4llige Ausleihen\: $PARAM
 BookMasterTable.lblNrOfLoans.text=Anzahl Ausleihen\: $PARAM
@@ -51,33 +54,37 @@ BookMasterTable.showUnavailableMenuItem.text=Zeige Nicht Verf\u00FCgbare
 BookMasterTable.textField.text=Suche
 BookMasterTable.txtSearch.text=Suche
 BookMasterTable.viewMenu.text=Ansicht
-Library.DateFormat=dd.mm.yy
 BookMastertable.BookTableModes.All=Alle
 BookMastertable.BookTableModes.LentOnly=Nur Ausgeliehene
-BookMastertable.BookTableModes.OverdueOnly=Nur Überfällige
-BookDetail.btnCancel.text=Abbrechen
-MainView.Tab.Customers=Kunden
-CustomerMasterTable.ColumnHeader.CustomerNo=Kundennummer
-CustomerMasterTable.ColumnHeader.Name=Name
-CustomerMasterTable.ColumnHeader.Address=Adresse
-CustomerTab.CustomerStats.Title=Kundeninfos
-CustomerTab.btnShowSelected.text=Selektierte anzeigen
-CustomerTab.btnAddNewCustomer.text=Neuer Kunde
-Customertab.pnlCustomerInventory.borderTitle=Kundenliste
-CustomerTab.lblNrOfCustomers.text=Anzahl Kunden: $PARAM
+BookMastertable.BookTableModes.OverdueOnly=Nur \u00DCberf\u00E4llige
+CustomerDetail.City=Stadt
 CustomerDetail.CustomerNo=ID
-CustomerDetail.Surname=Vorname
 CustomerDetail.Name=Nacme
 CustomerDetail.Street=Strasse
+CustomerDetail.Surname=Vorname
 CustomerDetail.Zip=PLZ
-CustomerDetail.City=Stadt
-CustomerDetail.btnReset.text=Zurücksetzen
-CustomerDetail.btnDelete.text=Löschen
-CustomerDetail.btnSave.text=Speichern
 CustomerDetail.btnCancel.text=Abbrechen
-CustomerDetail.deleteDlg.message=Wollen Sie diesen Kunden wirklich löschen? Diese Aktion kann nicht rückgängig gemacht werden.
+CustomerDetail.btnDelete.text=L\u00F6schen
+CustomerDetail.btnReset.text=Zur\u00FCcksetzen
+CustomerDetail.btnSave.text=Speichern
+CustomerDetail.deleteDlg.message=Wollen Sie diesen Kunden wirklich l\u00F6schen? Diese Aktion kann nicht r\u00FCckg\u00E4ngig gemacht werden.
 CustomerDetail.deleteDlg.title=Sind Sie sicher?
-BookDetail.deleteDlg.message=Wollen Sie dieses Buch wirklich löschen? Dadurch werden auch alle Exemplare dieses Titels gelöscht. Diese Aktion kann nicht rückgängig gemacht werden.
-BookDetail.deleteDlg.title=Sind Sie sicher?
+CustomerMasterTable.ColumnHeader.Address=Adresse
+CustomerMasterTable.ColumnHeader.CustomerNo=Kundennummer
+CustomerMasterTable.ColumnHeader.Name=Name
+CustomerTab.CustomerStats.Title=Kundeninfos
+CustomerTab.btnAddNewCustomer.text=Neuer Kunde
+CustomerTab.btnShowSelected.text=Selektierte anzeigen
+CustomerTab.lblNrOfCustomers.text=Anzahl Kunden\: $PARAM
+Customertab.pnlCustomerInventory.borderTitle=Kundenliste
+Library.DateFormat=dd.mm.yy
+LoanDetail.btnCopy.text=Suchen
+LoanDetail.lblCopyId.text=Exemplar-Nr.
+LoanDetail.lblCustomer.text=Kunde
+LoanDetail.lblCustomerId.text=Kundennr.
+LoanDetail.lblReturnDate.text=R\u00FCckgabe
+LoanDetail.nrOfLoansOfCustomer.text=Anzahl Ausleihen\: $PARAM
+MainView.Tab.Customers=Kunden
 MainView.btnExit.text=Schliessen
-LoanDetail.nrOfLoansOfCustomer.text=Anzahl Ausleihen: $PARAM
+LoanDetail.loanNewTitle.text=Neuen Titel ausleihen
+LoanDetail.CustomerSelection.text=Kundenauswahl
