--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -1,7 +1,8 @@
 #Eclipse messages class
-#Sat Nov 16 20:47:33 CET 2013
+#Sun Nov 17 13:16:44 CET 2013
 BookDetail.btnAdd.text=Add Copy
 BookDetail.btnCancel.text=Cancel
+BookDetail.btnDelete.text=Delete
 BookDetail.btnRemove.text=Delete
 BookDetail.btnRemoveCopy.text=Remove selected
 BookDetail.btnReset.text=Reset
@@ -40,8 +41,8 @@ BookMasterLoanTable.LoanDate.Until=until $PARAM
 BookMasterTable.ColumnHeader.Author=Author
 BookMasterTable.ColumnHeader.Available=Available
 BookMasterTable.ColumnHeader.Publisher=Publisher
-BookMasterTable.ColumnHeader.Title=Title
 BookMasterTable.ColumnHeader.Shelf=Shelf
+BookMasterTable.ColumnHeader.Title=Title
 BookMasterTable.chckbxOnlyDueLoans.desc=Show all loans or only overdue ones
 BookMasterTable.chckbxOnlyDueLoans.text=Show Overdue Loans only
 BookMasterTable.chckbxOnlySelected.text=Only available
@@ -71,13 +72,6 @@ CustomerDetail.btnReset.text=Reset
 CustomerDetail.btnSave.text=Save
 CustomerDetail.deleteDlg.message=Do you really want to delete this customer? This action cannot be reversed.
 CustomerDetail.deleteDlg.title=Are you sure?
-CustomerDetail.lblNewLabel.text=New label
-CustomerDetail.lblNewLabel.text_1=New label
-CustomerDetail.lblNewLabel.text_2=ZIP
-CustomerDetail.lblNewLabel_1.text=New label
-CustomerDetail.lblNewLabel_1.text_1=New label
-CustomerDetail.lblNewLabel_1.text_2=City
-CustomerDetail.lblNewLabel_2.text=Surname
 CustomerMasterTable.ColumnHeader.Address=Address
 CustomerMasterTable.ColumnHeader.CustomerNo=Customer No.
 CustomerMasterTable.ColumnHeader.Name=Name
@@ -87,6 +81,13 @@ CustomerTab.btnShowSelected.text=Show selected
 CustomerTab.lblNrOfCustomers.text=Nr of customers\: $PARAM
 Customertab.pnlCustomerInventory.borderTitle=Customer List
 Library.DateFormat=mm/dd/yy
+LoanDetail.btnCopy.text=Find
+LoanDetail.lblCopyId.text=Copy ID
+LoanDetail.lblCustomer.text=Customer
+LoanDetail.lblCustomerId.text=CustomerID
+LoanDetail.lblReturnDate.text=Return Date
+LoanDetail.nrOfLoansOfCustomer.text=Nr of loans\: $PARAM
 MainView.Tab.Customers=Customers
 MainView.btnExit.text=Exit
-LoanDetail.nrOfLoansOfCustomer.text=Nr of loans: $PARAM
+LoanDetail.loanNewTitle.text=Loan New Title
+LoanDetail.CustomerSelection.text=Customer Selection
