added more icons (show selected, close, search field)

--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -18,10 +18,10 @@ BookDetail.pnlInformation.borderTitle=Book Information
 BookDetail.pnlSpecimensEdit.borderTitle=Copies
 BookMaster.Tab.Books=Books
 BookMaster.Tab.Loans=Loans
-BookMaster.btnAddNewBook.text=Add new book
-BookMaster.btnAddNewLoan.text=Add New Loan
+BookMaster.btnAddNewBook.text=Add Book
+BookMaster.btnAddNewLoan.text=Add Loan
 BookMaster.btnShowSelected.text=Show selected
-BookMaster.btnShowSelectedLoans.text=Show selected Loans
+BookMaster.btnShowSelectedLoans.text=Show selected
 BookMaster.frmTodoTitle.title=BookMaster - DEFAULT LOCALE
 BookMaster.lblChosen.text=Selected\: $PARAM
 BookMaster.lblNrOfBooks.text=Nr of books\: $PARAM
