--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -18,10 +18,10 @@ BookDetail.pnlInformation.borderTitle=Buch Information
 BookDetail.pnlSpecimensEdit.borderTitle=Exemplare
 BookMaster.Tab.Books=B\u00FCcher
 BookMaster.Tab.Loans=Ausleihen
-BookMaster.btnAddNewBook.text=Neues Buch hinzuf\u00FCgen
-BookMaster.btnAddNewLoan.text=Neue Ausleihe erfassen
-BookMaster.btnShowSelected.text=Selektierte Anzeigen
-BookMaster.btnShowSelectedLoans.text=Selektierte Ausleihe anzeigen
+BookMaster.btnAddNewBook.text=Buch hinzuf\u00FCgen
+BookMaster.btnAddNewLoan.text=Ausleihe erfassen
+BookMaster.btnShowSelected.text=Selektierte anzeigen
+BookMaster.btnShowSelectedLoans.text=Selektierte anzeigen
 BookMaster.frmTodoTitle.title=BookMaster - CH-LOCALE
 BookMaster.lblChosen.text=Ausgew\u00E4hlt\: $PARAM
 BookMaster.lblNrOfBooks.text=Anzahl B\u00FCcher\: $PARAM
