added Icons in LoanTable

--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -91,3 +91,5 @@ LoanDetail.loanNewTitle.text=Loan New Title
 LoanDetail.nrOfLoansOfCustomer.text=Nr of loans\: $PARAM
 MainView.Tab.Customers=Customers
 MainView.btnExit.text=Exit
+LoanTable.CellContent.Overdue=Overdue
+LoanTable.CellContent.OK=OK
