--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -88,3 +88,5 @@ MainView.Tab.Customers=Kunden
 MainView.btnExit.text=Schliessen
 LoanDetail.loanNewTitle.text=Neuen Titel ausleihen
 LoanDetail.CustomerSelection.text=Kundenauswahl
+LoanTable.CellContent.Overdue=Fällig
+LoanTable.CellContent.OK=OK
