CopyList --> CopyTable. Will see how it works out..

--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -93,3 +93,10 @@ MainView.Tab.Customers=Customers
 MainView.btnExit.text=Exit
 LoanTable.CellContent.Overdue=Overdue
 LoanTable.CellContent.OK=OK
+CopyTable.ColHeader.Condition=Condition
+LoanDetail.returnCopyBtn.text=Return selected book
+Copy.Condition.New=New
+Copy.Condition.Damaged=Damaged
+Copy.Condition.Good=Good
+Copy.Condition.Lost=Lost
+Copy.Condition.Waste=Waste
