--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -90,3 +90,10 @@ LoanDetail.loanNewTitle.text=Neuen Titel ausleihen
 LoanDetail.CustomerSelection.text=Kundenauswahl
 LoanTable.CellContent.Overdue=Fällig
 LoanTable.CellContent.OK=OK
+CopyTable.ColHeader.Condition=Zustand
+LoanDetail.returnCopyBtn.text=Selektiertes Buch zurückgeben
+Copy.Condition.New=Neu
+Copy.Condition.Damaged=Beschädigt
+Copy.Condition.Good=Gut
+Copy.Condition.Lost=Verloren
+Copy.Condition.Waste=Zerstört
