display return date if a loan is returned or due date i a loan is still lent.

--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -33,7 +33,7 @@ BookMaster.pnlLoansInventoryStats.borderTitle=Loans statistics
 BookMaster.tbsMain.toolTipText=tooltip
 BookMasterLoanTable.ColumnHeader.CopyID=Copy ID
 BookMasterLoanTable.ColumnHeader.LentTo=Lent to
-BookMasterLoanTable.ColumnHeader.LentUntil=Lent until
+BookMasterLoanTable.ColumnHeader.LentUntil=Return Date
 BookMasterLoanTable.ColumnHeader.Status=Status
 BookMasterLoanTable.ColumnHeader.Title=Title
 BookMasterLoanTable.LoanDate.Since=since $PARAM
