--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -33,7 +33,7 @@ BookMaster.pnlLoansInventoryStats.borderTitle=Ausleihe-Statistik
 BookMaster.tbsMain.toolTipText=TODO TOOLTIP
 BookMasterLoanTable.ColumnHeader.CopyID=Exemplar-ID
 BookMasterLoanTable.ColumnHeader.LentTo=Ausgeliehen an
-BookMasterLoanTable.ColumnHeader.LentUntil=Ausgeliehen bis
+BookMasterLoanTable.ColumnHeader.LentUntil=Rückgabedatum
 BookMasterLoanTable.ColumnHeader.Status=Status
 BookMasterLoanTable.ColumnHeader.Title=Titel
 BookMasterLoanTable.LoanDate.Since=seit $PARAM
