--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -59,7 +59,7 @@ BookMastertable.BookTableModes.LentOnly=Nur Ausgeliehene
 BookMastertable.BookTableModes.OverdueOnly=Nur \u00DCberf\u00E4llige
 CustomerDetail.City=Stadt
 CustomerDetail.CustomerNo=ID
-CustomerDetail.Name=Nacme
+CustomerDetail.Name=Name
 CustomerDetail.Street=Strasse
 CustomerDetail.Surname=Vorname
 CustomerDetail.Zip=PLZ
