Translations for LoanTable (copies) + coloring.

--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -100,3 +100,6 @@ Copy.Condition.Damaged=Damaged
 Copy.Condition.Good=Good
 Copy.Condition.Lost=Lost
 Copy.Condition.Waste=Waste
+LoanTable.CellContent.Overdue=Overdue
+LoanTable.CellContent.Lent=Lent
+LoanTable.CellContent.Old=Returned
