--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -97,3 +97,6 @@ Copy.Condition.Damaged=Beschädigt
 Copy.Condition.Good=Gut
 Copy.Condition.Lost=Verloren
 Copy.Condition.Waste=Zerstört
+LoanTable.CellContent.Overdue=Überfällig
+LoanTable.CellContent.Lent=Ausgelehnt
+LoanTable.CellContent.Old=Zurückgebracht
